# raytracing-weekend

./: .clang-format  .clang-tidy  CMakeLists.txt
cpp/: .clang-format  .clang-tidy  CMakeLists.txt
cpp/include/: color.hpp  hit.hpp
cpp/src/: CMakeLists.txt
cpp/src/app/: main.cpp
cpp/src/lib/: hit.cpp  sphere.cpp
include/: color.hpp  hit.hpp  ray.hpp  sphere.hpp  vec3.hpp
include/rtweek/: color.hpp  hit.hpp  ray.hpp  sphere.hpp  vec3.hpp
rust/: Cargo.toml
rust/src/: color.rs  main.rs  ray.rs  vec3.rs
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  color.cpp  hit.cpp  ray.cpp  sphere.cpp  vec3.cpp
test/: CMakeLists.txt
